--- a/严选购物车.html
+++ b/严选购物车.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>严选居家·夏凉·牛皮席三件套</title>
+	<title>严选居家·购物车</title>
 	<link rel="stylesheet" href="./css/common.css">
 	<link rel="stylesheet" href="./css/yanxuanpc.css">
 	<link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.css">
@@ -667,10 +667,41 @@
 						<a href="#" class="color1">查看优惠券</a>
 					</div>
 				</div>
+				<div class="neirong">
+					<div class="quanxuan">
+						<div class="left">
+							<input type="checkbox">
+							<span>全选</span>
+						</div>
+						<div class="spxx">
+							<span>商品信息</span>
+						</div>
+						<div class="danjia">
+							<span>单价</span>
+						</div>
+						<div class="shuliang">
+							<span>数量</span>
+						</div>
+						<div class="xiaoji">
+							<span>小计</span>
+						</div>
+						<div class="caozuo">
+							<span>操作</span>
+						</div>
+					</div>
+					<div class="coudan">
+						<span>全场加价购</span>
+						<span>已满足【满130元可超值换购】</span>
+						<a href="#" class="btn">
+							去换购
+						</a>
+						<a href="#" class="jx">继续凑单 ></a>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
-	<!-- <div class="topfooter">
+	<div class="topfooter">
 			<div class="wrap">
 				<div class="link">
 					<ul>
@@ -787,6 +818,6 @@
 				</div>
 			</div>
 		</div>
-	</div> -->
+	</div>
 </body>
 </html>
